cmake_minimum_required(VERSION 3.22)
project(untitled33 C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled33 main.c new.c new2.c new5.cpp new6.c 1.c 2.c 3.c 4.c ch1_3_main.c ch1_3_addnum.c ch1_4.c ch1_5.c ch2_1.c ch2_2.c ch2_3.c ch2_4.c ch2_5.c ch2_6.c ch2_7.c ch2_8.c ch2_9.c ch3_1.c 2-2-1.c ch2-4-1.c p2-2.c p2-3.c p2-8.c p2-10.c p2-11.c p3-6.c p3-7.c p3-8.c p3-13.c p3-14.c loop.c p3-15.c 4-7.c writeLinux.c ch4-11.c ch4-12.c ch4-14.c)
